update new wines

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       padding:0;
       box-sizing:border-box;
       font-family:sans-serif;
-      font-size:12.5px;
+      font-size:9.8px;
     }
     main{
       width:3.5in;
@@ -103,7 +103,7 @@
       
       <div class="wine">
         <span>
-          Pierre-Yves Colin-Morey Rosé, <b>Pinot Noir Rosé, </b>Burgundy, France, 2023 ___%
+          Pierre-Yves Colin-Morey, <b>Pinot Noir Rosé, </b>Burgundy, France, 2023 ___%
         </span>
         <span>29</span>
       </div>
