fix formatting to allow for larger font size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       padding:0;
       box-sizing:border-box;
       font-family:sans-serif;
-      font-size:9.8px;
+      font-size:12px;
     }
     main{
       width:3.5in;
@@ -17,9 +17,11 @@
       border:1px solid black;
     }
     .wine{
+      width:100%;
       display:flex;
-      gap:20px;
-      padding: 8px 9px;
+      justify-content: space-between;
+      gap:10px;
+      padding: 8px 9px 0px;
     }
   </style>
   </head>
