--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       padding:0;
       box-sizing:border-box;
       font-family:sans-serif;
-      font-size:12px;
+      font-size:13px;
     }
     main{
       width:3.5in;
       height:13cm;
+      margin-bottom: 10px;
       border:1px solid black;
     }
     .wine{
@@ -166,7 +167,7 @@
       
       <div class="wine">
         <span>
-          <b>CABERNET SAUVIGNON</b>, Grgich Hills "Special Selection" Estate Grown, Napa Valley, California 2020 14.1%abv
+          <b>CABERNET SAUVIGNON</b>, Grgich Hills "Special Selection" Estate Grown, Napa Valley, California 2020 - 14.1%abv
         </span>
         <span>42</span>
       </div>
